kubectl_deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cp-metrics-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cp-metrics-app
  template:
    metadata:
      labels:
        app: cp-metrics-app
    spec:
      containers:
        - name: cp-metrics-app
          image: poornimak/cloud-platform-metrics:1.1
          ports:
            - containerPort: 8080
